--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,3 +19,13 @@
 // Utilities
 @import "./utilities/visibility";
 
+// *,
+// *::before,
+// *::after {
+//   box-sizing: border-box;
+// }
+
+
+body {
+    padding-bottom: $footer-height;
+}
