--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -2,22 +2,20 @@
 
 .footer {
   background-color: $bg-primary;
-  padding: 15px 25px;
-   position:fixed;
-   left:0px;
-   bottom:0px;
-   height:30px;
-   width:100%;
-
+  padding: 15px 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow-x: auto; // Enable horizontal scrolling if content overflows
 
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%; // Make sure the container stretches across the footer
-    max-width: 1200px; // Set a maximum width if needed
-    margin: 0 auto; // Center the container horizontally
-    padding: 0 15px; // Adjust padding for responsiveness
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
   }
 
   p {
@@ -30,12 +28,13 @@
   .footer-nav {
     display: flex;
     align-items: center;
+    flex-wrap: nowrap; // Prevent navigation links from wrapping
 
     // Targeting the anchor links directly
     a,
     Link {
       font-size: 14px;
-      margin-right: 30px; // Increased margin for more spacing
+      margin-right: 20px; // Improved spacing
       padding: 8px 12px;
       border-radius: 20px;
       transition: background-color 0.3s, color 0.3s;
@@ -51,6 +50,11 @@
       &:last-child {
         margin-right: 0;
       }
+    }
+
+    @media (max-width: $tablet) {
+      // Adjust the max-width to match your design
+      max-width: 300px;
     }
   }
 }
