--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -20,6 +20,15 @@
     width: 100%; // Ensure full width
   }
 
+  .logo {
+  width: 40px;
+  height: 40px;
+  background-color: blue;
+  border-radius: 50%; /* Makes it a circle */
+  display: inline-block; /* To make it inline with other nav items */
+  margin-right: 10px; /* A little spacing */
+}
+
   .nav {
     display: flex;
     align-items: center; // Changed from 'left' to 'center'
