--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import "./base/typography";
 @import "./base/colors";
 @import "./base/mixins";
+@import "./base/links";
 // Components
 @import "./components/buttons";
 @import "./components/forms";
@@ -19,11 +20,6 @@
 // Utilities
 @import "./utilities/visibility";
 
-// *,
-// *::before,
-// *::after {
-//   box-sizing: border-box;
-// }
 
 
 body {
