--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,6 +28,6 @@ body {
 
 @media all and (display-mode: standalone) {
   body {
-    background-color: yellow;
+    background-color: white;
   }
 }
